[package]
name = "sidetree"
version = "0.1.0"
authors = ["Tomislav Markovski <tomislav@trinsic.id>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_jcs = "0.1.0"
libsecp256k1 = "0.3.5"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.serde]
default-features = false
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
default-features = false
features = ["std", "float_roundtrip"]
version = "1.0"